2020-06-22  Akira Kakuto  <kakuto@w32tex.org>

	* dvipdfmx.c: Move dpx_delete_old_cache(image_cache_life)
	because image caching did'nt work.
	* dvi.c: Use MFOPEN() instead of fopen().
	* dpxfile.c, pdfximage.c: Use generalized stat() to handle
	UTF-8 names (Windows only).

2020-06-21  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* tt_cmap.c: Lower priority for Soft-hyphen U+00AD when
	generating ToUnicode CMap.
	* tt_cmap.c, type1c.c: Cause an error when "CFF " table is not
	found. (Possibly due to variable font which uses unsupported
	"CFF2" table)

2020-06-09  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* pdfdev.c: Another workaround for fake-bold issue.
	(See changes 2019-06-30 and 2020-02-29)

2020-05-26  Akira Kakuto  <kakuto@w32tex.org>

	* dvi.c: Introduce rgba_used in order to indicate that
	rgba_color for a XeTeX font is used or not. It enables full
	range of opacity, 0-255.
	* configure.ac: Version 20200526.

2020-05-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* vf.c: reduce message by '-v' less than by '-vv' for
	fallback of virtual fonts.

2020-05-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvipdfmx-upjf.test, Makefile.{am,in},
	tests/Makefile_upjf, tests/upjf{,-r,-g}.tfm,
	tests/upjf.{tex,dvi,map}, tests/upjf_{full,omit}.vf,
	tests/upjf_{full,omit}.cnf, tests/UPJF-UTF16-H:
	Add a new test for fallback of virtual fonts.
	* vf.c: Tweak debugging message for fallback of virtual fonts.

2020-03-27  Karl Berry  <karl@tug.org>

	* TeX Live 2020.

2020-03-15  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tfm.c, tfm.h, vf.c: Fallback multibyte character
	in virtual font for (u)pTeX.
	* configure.ac: version 20200315.
	https://github.com/texjporg/tex-jp-build/issues/99

	A new rule for virtual fonts is implemented:
	If a virtual font has no entry of a codepoint and the first
	MAPFONT designates a (u)pTeX TFM(JFM), then we designate the
	glyph (usually with a fullwidth metric) of the same codepoint
	in the TFM(JFM) with the smallest font ID.